# MIPT-DL-1

./: README.md  pyproject.toml
hw/hw1/: hw_1_game_of_thrones.ipynb
hw/hw2/: hw_2_linear_models.ipynb
hw/hw3/: hw_3_kaggle.ipynb
seminars/base/: part_2_intro_to_sklearn.ipynb
seminars/linear_models/: part_2_regularization.ipynb
seminars/trees/: model_selection_ensembles.ipynb
