[project]
name = "hw"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "gdown (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false
[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
